# fiql_parser

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  index.md  index.rst  usage.md
fiql_parser/: __init__.py  constants.py  constraint.py  exceptions.py  expression.py  operator.py  parser.py
tests/: test_objects.py  test_parse.py  test_regex.py
