[metadata]
name = fiql-parser
version = attr: fiql_parser.__version__
description = Python parser for the Feed Item Query Language (FIQL).
long_description = file: README.md
long_description_content_type = text/x-rst
author = Serge Domkowski
author_email = sergedomk@gmail.com
url = https://github.com/sergedomk/fiql_parser
license = BSD
platforms = 'any'
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language:: Python:: 3:: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[flake8]
max-complexity = 10
max-line-length = 120
exclude = docs/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
disallow_any_generics = false
